# sphinx-rtd-light-dark

./: .gitignore  README.md  setup.cfg  setup.py
rtd_light_dark/: __init__.py  breadcrumbs.html  layout.html  theme.conf
rtd_minimal_theme/: __init__.py
sphinx_rtd_light_dark/: __init__.py  breadcrumbs.html  layout.html  theme.conf
sphinx_rtd_light_dark/static/: light-dark.css  light-dark.js
