[metadata]
name = rtd_minimal_theme
author = Luke Davis
author_email = lukelbd@gmail.com
maintainer = Luke Davis
maintainer_email = lukelbd@gmail.com
license = MIT
description = A minimal variant of the read the docs sphinx theme with light and dark modes.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python :: 3

project_urls =
    Issue Tracker = https://github.com/lukelbd/rtd_minimal_theme/issues
    Source Code = https://github.com/lukelbd/rtd_minimal_theme

[options]
packages = rtd_minimal_theme
setup_requires = setuptools>=44; toml; setuptools_scm>=3.4.3
install_requires = pygments
include_package_data = True
python_requires = >=3.6.0

[options.package_data]
sphinx.rtd_minimal_theme = theme.conf, static/*.css, static/*.js

[options.entry_points]
sphinx.html_themes =
  name_of_theme = rtd_minimal_theme
