[metadata]
name = rtd_light_dark
author = Luke Davis
author_email = lukelbd@gmail.com
maintainer = Luke Davis
maintainer_email = lukelbd@gmail.com
license = MIT
description = A minimal variant of the read the docs sphinx theme with light and dark modes.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

project_urls =
    Issue Tracker = https://github.com/lukelbd/rtd_light_dark/issues
    Source Code = https://github.com/lukelbd/rtd_light_dark

[options]
packages = rtd_light_dark
setup_requires = setuptools>=44; toml; setuptools_scm>=3.4.3
install_requires = pygments; sphinx_rtd_theme==0.4.3
include_package_data = True
python_requires = >=3.6.0

[options.package_data]
sphinx.rtd_light_dark = theme.conf, static/*.css, static/*.js

[options.entry_points]
sphinx.html_themes =
  name_of_theme = rtd_light_dark
